[package]
name = "http3"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytes = "1.0"
futures = "0.3"
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1.3.1"
quinn = "0.11"
rcgen = "0.13"
rustls = {version = "0.23", features = ["aws_lc_rs"]}
tokio = {version = "1.0", features = ["full"]}


[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
